commit after payment demo and emi page integration

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ CLOUDINARY_API_KEY=984843651494516
 CLOUDINARY_API_SECRET=iC8yfDEDNTpsDVutdC1cfLwaXlQ
 MAIL_USERNAME=test
 MAIL_PASSWORD=muzm wzsj gqvi iljt
+TWO_FACTOR_API_KEY=3a9c5a1b-0c4d-4e5f-8b6a-7c8d9e0f1a2b
